--- a/character-detection-GUI.ipynb
+++ b/character-detection-GUI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "a9a11d96",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model=load_model(\"D:/Ai model/model1\")"
+    "model=load_model(\"model1\")"
    ]
   },
   {
